load data and step text

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
 		"request": "^2.87.0",
 		"require-dir": "^1.0.0",
 		"run-sequence": "^2.2.0",
+		"scrollama": "1.4.1",
 		"source-map": "^0.7.3",
+		"stickyfilljs": "2.0.5",
 		"superagent": "^3.8.3",
 		"uglifyjs-webpack-plugin": "1.2.7",
 		"webpack": "^4.14.0",
