--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"gulp-sourcemaps": "^2.6.4",
 		"gulp-stylus": "^2.7.0",
 		"gulp-util": "^3.0.7",
+		"intersection-observer": "0.5.0",
 		"lodash.debounce": "^4.0.8",
 		"lodash.uniqby": "4.7.0",
 		"nouislider": "^11.1.0",
